--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
