--- a/src/main/resources/runner.properties
+++ b/src/main/resources/runner.properties
@@ -5,7 +5,7 @@ soapui.project=C:\\projects\\mercurial\\svcmon\\samples\\Global-Weather-soapui-p
 
 
 # Each suite name is treated as a 'suite name'.properties file somewhere in the same directory as this file.
-soapui-test-suites=GWA-TestSuite
+soapui.test-suites=GWTestSuite
 
 # default properties - reused across all test suites (defaults)
 country=Norway
