Making testsuite runner cmd files temp files due to process/file contention at runtime under shared name

--- a/src/main/resources/runner.properties
+++ b/src/main/resources/runner.properties
@@ -3,8 +3,8 @@ soapui.testrunner.path=C:\\Program\ Files\\SmartBear\\SoapUI-4.6.1\\bin
 soapui.report.dir=c:\\projects\\mercurial\\svcmon\\reports
 soapui.project=C:\\projects\\mercurial\\svcmon\\samples\\Global-Weather-soapui-project.xml
 
-
-# Each suite name is treated as a 'suite name'.properties file somewhere in the same directory as this file.
+# Each suite name is treated as a 'suite name'.properties file somewhere in the same directory as this file. 
+# Delimit the files with ;
 soapui.test-suites=GWTestSuite;CCTestSuite
 
 # default properties - reused across all test suites (defaults)
